# stream-metadata-rust

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: rust.yml
docs/: development.md  release-notes.md
src/: fcos.rs  lib.rs  rhcos.rs
tests/it/: main.rs
tests/it/fixtures/: fcos-stream.json
