[package]
name = "coreos-stream-metadata"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
nix = { version = ">= 0.24, < 0.26", default-features = false, features = ["feature"] }
serde = { version = "^1.0", features = ["derive"] }
strum = ">= 0.20, < 0.25"
strum_macros = ">= 0.20, < 0.25"

[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"
