[package]
name = "coreos-stream-metadata"
description = "Fetch and parse stream metadata for Fedora CoreOS and derivatives"
repository = "https://github.com/coreos/stream-metadata-rust"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.58.0"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
strum = ">= 0.20, < 0.25"
strum_macros = ">= 0.20, < 0.25"

[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"
