[package]
name = "coreos-stream-metadata"
description = "Fetch and parse stream metadata for Fedora CoreOS and derivatives"
repository = "https://github.com/coreos/stream-metadata-rust"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.58.0"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
strum = ">= 0.20, < 0.26"
strum_macros = ">= 0.20, < 0.26"

[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"

[package.metadata.release]
pre-release-commit-message = "cargo: coreos-stream-metadata v{{version}}"
publish = false
push = false
sign-commit = true
sign-tag = true
tag-message = "coreos-stream-metadata v{{version}}"
